feat: route all users
